2010-02-07  Sebastien Pouliot  <sebastien@ximian.com>

	* border.cpp (Render): round (GetCornerRadius) can never be NULL
	and SetupBrush cant be called with a NULL area (without a crash).
	Avoid calling the drawing code on empty area because it often
	lead (depending on brush type) to non-invertible (invalid) matrix
	warnings (and we save a bit of time avoiding all this)

2010-02-05  David Reveman  <davidr@novell.com>

	* effect.cpp: Use sampler mode CLAMP_TO_EDGE everywhere and
	make sure we have at least one pixel padding for
	DropShadowEffect.

	* uielement.cpp (OnSubPropertyChanged): UpdateBounds instead
	simple invalidate as the padding might have changed.

	* effect.h:
	* effect.cpp: Minimize BlurEffect and DropShadowEffect padding.

	* effect.h:
	* effect.cpp: Remove default values from padding properties.

	* effect.cpp: Add GetTopPadding, GetBottomPadding,
	GetLeftPadding and GetRightPadding functions.
	* uielement.cpp: Use new padding functions.

	* effect.h:
	* effect.cpp: Use RUNTIME_DEBUG_EFFECT instead MOON_EFFECT_DEBUG
	environment variable.

	* debug.h:
	* runtime.cpp:
	* runtime.h: Add RUNTIME_DEBUG_EFFECT.

	* effect.cpp: Remove gallium code from debug output instead of
	USE_GALLIUM def.

2010-02-05  Jackson Harper  <jackson@ximian.com>

	* effect.cpp: Make debug output use the USE_GALLIUM def.

2010-02-05  David Reveman  <davidr@novell.com>

	* effect.cpp: Cleanup debug output.

2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* runtime.cpp|h: Add a monotonic user-initiated counter so
	we can ensure some actions (like PopupWindow) cannot occur
	more than once per user-initiated event.

2010-02-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/window-gtk.cpp: Make both conditions of the #if FFMPEG
	condition compilable.

2010-02-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Don't optimize seeks to the current position. It
	breaks the olympics site.

2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>
