@@ -1,3 +1,11 @@
+2010-02-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* NameTortureTest/rules: Fixed typo and added information about
+	new test cases.
+
+	* NameTortureTest/Page.xaml.cs:
+	* NameTortureTest/CustomControl.xaml: Added more test cases.
+
 2010-02-08  Alan McGovern  <amcgovern@novell.com>
 
 	* NameTortureTest/Page.xaml.cs: Add a new name torture test to
@@ -104,4 +112,3 @@
 	* Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight: Initial
 	  (and almost empty) implementation of
 	  Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.
-
